--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -3,24 +3,6 @@ body {
     background: #f5f5f5;
 }
 
-#header {
-    margin: auto;
-    width: 100%;
-    padding: 10px 0;
-    background-color: #3F51B5;
-    color: #ffffff;
-    text-align: center;
-    cursor: pointer;
-    
-    h1 {
-        height: 100%;
-    }
-}
-
-#base {
-    background-color: #ffffff;
-}
-
 .nav-pills .nav-link {
     margin-bottom: 5px;
     transition: background-color 500ms;
@@ -35,18 +17,6 @@ body {
 
 .container-fluid {
     margin-top: 10px;
-}
-
-.blog {
-    padding: 10px 0;
-    position: relative;
-    overflow: hidden;
-    transition: all 500ms;
-}
-
-.actions {
-    text-align: right;
-    color: #ffffff;
 }
 
 .card > .card-body > h6.card-subtitle {
@@ -64,8 +34,14 @@ body {
     transition: opacity 200ms;
 }
 
-.blogs > .btn.btn-block {
-    margin-bottom: 10px;
+.top-leave-enter {
+    transform: translateY(-330px)
+}
+
+.page-divider {
+    width: 100%;
+    padding: 10px 0;
+    text-align: center;
 }
 
 .panel-slide-enter {
@@ -90,11 +66,6 @@ body {
     transition: all 200ms;
 }
 
-.blogs > .paginated > .btn-group {
-    display: flex;
-    justify-content: center;
-}
-
 .endless .top {
     position: fixed;
     display: none;
@@ -108,4 +79,14 @@ body {
 
 .form-group > .is-invalid > .form-control {
     border-color: #dc3545;
+}
+
+.slide-top-enter,
+.slide-top-leave-to {
+    transform: translateY(-500px);
+}
+
+.slide-top-enter-active,
+.slide-top-leave-active {
+    z-index: -1;
 }
